fix: changed class to classname in hero-section update: changed hover color of scrollbar

--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -52,5 +52,5 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #16F2B3; /* color of the thumb on hover */
+  background: #1bd39f; /* color of the thumb on hover */
 }
